# thefuckingweather-hs

./: LICENSE  README.md  thefuckingweather.cabal  thefuckingweather.hs
Web/: TheFuckingWeather.hs
